--- a/src/app/shared/component/comments/comments.component.html
+++ b/src/app/shared/component/comments/comments.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
           
-            <div class="col-lg-6 col-md-8 col-sm-10 offset-md-1 offset-sm-1 col-12 mt-4"  *ngIf="condition" >
+            <div class="col-lg-6 col-md-8 col-sm-10 offset-md-1 offset-sm-1 col-12 mt-4"  >
                 <form id="algin-form" class="bg-light mt-5" [formGroup]="commentForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <h4>اترك تعليقك :</h4>
