--- a/src/app/shared/component/cart-details/cart-details.component.css
+++ b/src/app/shared/component/cart-details/cart-details.component.css
@@ -118,3 +118,35 @@ h1,h4  ,h3,h2 {
 *{
   line-height: 1.5em;
 }
+
+
+@media(max-width:768px){
+  #post{
+      width: 100%;
+  }
+}
+
+
+
+
+
+#post{
+  margin: 10px;
+  padding: 6px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  text-align: center;
+  color: white;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 13px;
+  width: 50%;
+  background: #FE6F41;
+
+ 
+}
+
+#post:hover{
+  background: #585858;
+
+}
