--- a/src/app/admin/component/about-policty/about-policty.component.css
+++ b/src/app/admin/component/about-policty/about-policty.component.css
@@ -1,6 +1,7 @@
 #add{
     height: 42px;
     padding: 10px;
-    margin-right: 928px;
-    margin-bottom: 30px;
+    margin-right: 849px;
+        margin-bottom: 30px;
+        /* width: 200px; */
 }
