--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -77,9 +77,22 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/aboutPolicty">
+            <span data-feather="layers"></span>
+            معلومات عنا
+          </a>
+        </li>
+        
+        <li class="nav-item">
           <a class="nav-link" routerLink="/team">
             <span data-feather="layers"></span>
             فريقنا
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/followShow">
+            <span data-feather="layers"></span>
+            وسائل التواصل الاجتماعي
           </a>
         </li>
       </ul>
