--- a/src/app/admin/component/about-policty/about-policty.component.html
+++ b/src/app/admin/component/about-policty/about-policty.component.html
@@ -1,7 +1,7 @@
 
 
-<div class="container mt-3">
-  <button type="submit" class="send" style="height: 42px;" id="add" (click)="add()">
+<div class="container mt-5">
+  <button type="submit" class="send col-2" style="height: 42px;" id="add" (click)="add()">
     اضافة محتوى جديد</button>
     <table class="table table-striped">
       <thead>
