--- a/src/app/admin/component/follow-links/follow-links.component.html
+++ b/src/app/admin/component/follow-links/follow-links.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container mt-3">
+<div class="container mt-3 col-lg-6 col-sm-12">
     <table class="table table-striped">
       <thead>
         <tr>
