--- a/src/app/components/rented/rented.component.html
+++ b/src/app/components/rented/rented.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 100px;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
