--- a/src/app/admin/component/payed-ads/payed-ads.component.html
+++ b/src/app/admin/component/payed-ads/payed-ads.component.html
@@ -1,65 +1,107 @@
-<div class="container ">
+<div class="container">
   <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
+    <input
+      matInput
+      #search
+      placeholder="search"
+      (keyup)="findContact(search.value)"
+    />
   </mat-form-field>
-  <div class="row w-100" *ngIf="length>0 else noData">
+  <div class="row w-100" *ngIf="length > 0; else noData">
     <div class="col-sm-12">
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 col-sm-12 table ">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        matSort
+        class="mat-elevation-z8 col-sm-12 table"
+      >
         <!-- Position Column -->
         <ng-container matColumnDef="الاعلان">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  p-3 "> الاعلان </th>
-          <td mat-cell *matCellDef="let element" class="col-sm-6 ">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            class="col-sm-6 h5 table-dark p-3 color"
+          >
+            الاعلان
+          </th>
+          <td mat-cell *matCellDef="let element" class="col-sm-6">
             <div class="card justify-content-start">
               <!-- <img src="{{}}" class="card-img-top" alt="..."> -->
               <div class="card-body">
-                <h5 class="card-title" style="font-size: 1.3em;color: #FE6F41 !important;">{{element.advertisement.title}} </h5>
-                <p class="card-text">{{element.advertisement.description}}</p>
+                <h5
+                  class="card-title"
+                  style="font-size: 1.3em; color: #fe6f41 !important"
+                >
+                  {{ element.advertisement.title }}
+                </h5>
+                <p class="card-text">{{ element.advertisement.description }}</p>
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
               </div>
-              </div>
-
-
-
-
+            </div>
           </td>
         </ng-container>
 
         <!-- Name Column -->
 
-
-
         <!-- [routerLink]='["/editproperty",element.id]' -->
 
         <ng-container matColumnDef="المستأجر">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1  table-dark h5 p-3" scope="row"> <p style="font-size: 1.2em;display:flex;width:100%;justify-content:center; align-items: center;">المستأجر</p> </th>
-          <td mat-cell *matCellDef="let element" class=""> <p class="" style="font-size:1.2em;height:100%;display:flex;width:100%;justify-content:center;align-items: center;" >{{element.user.name}}</p> </td>
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            class="col-sm-3 p-3 color table-dark h5"
+          >
+            اسم المستأجر
+          </th>
+          <td mat-cell *matCellDef="let element" class="center">
+            <p
+              class=""
+              style="font-size: 1.5em;padding: 5px;"
+            >
+              {{ element.user.name }}
+            </p>
+          </td>
         </ng-container>
         <ng-container matColumnDef="تعديل">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 text-center table-dark h5 p-3" scope="row"> عرض </th>
-          <td mat-cell *matCellDef="let element" class="col-sm-1 pt-2 "> <a class="btn btn-dark send" (click)="show(element.advertisement.id)">عرض</a> </td>
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            class="col-sm-1 text-center table-dark h5 p-3 color"
+            scope="row"
+          >
+            عرض
+          </th>
+          <td mat-cell *matCellDef="let element" class="col-sm-1 pt-2">
+            <a
+              mat-raised-button
+              class="send"
+              (click)="show(element.advertisement.id)"
+              >عرض</a
+            >
+          </td>
         </ng-container>
-        <!-- <ng-container matColumnDef="حذف">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 p-3  table-dark  h5"> حذف </th>
-          <td mat-cell *matCellDef="let element" class=" pt-2 ">
-            <a class="btn btn-dark send  w-50 d-block mr-2" (click)="delete(element.id)"> حذف</a> </td>
-        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displaycolumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displaycolumns"></tr>
       </table>
     </div>
-
-
   </div>
-  <mat-paginator  [length]="10" [pageSize]="10" [pageSizeOptions]="[10]" aria-label="select page" showFirstLastButtons>
-</mat-paginator>
-  <div>
-
-  </div>
+  <mat-paginator
+    [length]="10"
+    [pageSize]="10"
+    [pageSizeOptions]="[10]"
+    aria-label="select page"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  <div></div>
 </div>
 <ng-template #noData>
   <div class="noData">
-  <p>لايوجد اعلانات مدفوعة </p>
-</div>
+    <p>لايوجد اعلانات مدفوعة</p>
+  </div>
 </ng-template>
