--- a/src/app/components/not-rented-yet/not-rented-yet.component.html
+++ b/src/app/components/not-rented-yet/not-rented-yet.component.html
@@ -1,67 +1,100 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 100px;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
+    <input
+      matInput
+      #search
+      placeholder="search"
+      (keyup)="findContact(search.value)"
+    />
   </mat-form-field>
-  <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm" *ngIf="length>0 else noData">
-      <table mat-table [dataSource]="dataSource" matSort class="w-100 m-auto border border-5 table w-100 table-bordered">
-        <!-- Position Column -->
-        <ng-container matColumnDef="الاعلان">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  p-3 color"> الاعلان </th>
-          <td mat-cell *matCellDef="let element" class="col-sm-6 ">
+  <div
+    class="mat-elevation-z8 mt-2 m-auto table-responsive table-responsive-sm"
+    *ngIf="length > 0; else noData"
+  >
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      class="w-100 m-auto border border-5 table w-100 table-bordered"
+    >
+      <!-- Position Column -->
+      <ng-container matColumnDef="الاعلان">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="col-sm-6 h5 table-dark p-3 color"
+        >
+          الاعلان
+        </th>
+        <td mat-cell *matCellDef="let element" class="col-sm-6">
+          <mat-card class="text-right">
+            <mat-card-title style="font-size: 1.5em; color: #383838"
+              >{{ element.title }}
+            </mat-card-title>
+            <mat-card-content>{{ element.description }} </mat-card-content>
+          </mat-card>
+        </td>
+      </ng-container>
 
-              <mat-card class="text-right">
-                <mat-card-title style="font-size: 1.5em; color:#383838">{{ element.title }}	</mat-card-title>
-                  <mat-card-content>{{ element.description }}	</mat-card-content>
+      <!-- Name Column -->
 
-               </mat-card>
-
-
-
-          </td>
-        </ng-container>
-
-        <!-- Name Column -->
-
-
-
-
-
-        <!-- <ng-container matColumnDef="تعديل">
+      <!-- <ng-container matColumnDef="تعديل">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="color col-sm-1 text-center table-dark h5 p-3" scope="row"> تعديل </th>
           <td mat-cell *matCellDef="let element" class="col-sm-1 pt-5"> <a class="btn btn-dark send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
         </ng-container> -->
-        <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-3 p-3 color table-dark  h5"> الاجراءات المتخذه </th>
-          <td mat-cell *matCellDef="let element" class=" center ">
-
-
-            <!-- <a class="btn btn-dark send" (click)="delete(element.id)"> حذف</a> -->
-            <button mat-raised-button class="send m-2" (click)="delete(element.id)">حذف</button>
-            <a mat-raised-button
+      <ng-container matColumnDef="action">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="col-sm-3 p-3 color table-dark h5"
+        >
+          الاجراءات المتخذه
+        </th>
+        <td mat-cell *matCellDef="let element" class="center">
+          <!-- <a class="btn btn-dark send" (click)="delete(element.id)"> حذف</a> -->
+          <button
+            mat-raised-button
+            class="send m-2"
+            (click)="delete(element.id)"
+          >
+            حذف
+          </button>
+          <a
+            mat-raised-button
             class="send"
             [routerLink]="['/editproperty', element.id]"
           >
             تعديل</a
           >
+          <a
+            mat-raised-button
+            class="send"
+            [routerLink]="['/details', element.id]"
+          >
+            التفاصيل</a
+          >
+        </td>
+      </ng-container>
 
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displaycolumns;"></tr>
-      </table>
-
-
+      <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displaycolumns"></tr>
+    </table>
   </div>
-  <mat-paginator  [length]="10" [pageSize]="10" [pageSizeOptions]="[10]" aria-label="select page" showFirstLastButtons>
-</mat-paginator>
-  <div>
-
-  </div>
+  <mat-paginator
+    [length]="10"
+    [pageSize]="10"
+    [pageSizeOptions]="[10]"
+    aria-label="select page"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  <div></div>
 </div>
 <ng-template #noData>
   <div class="noData">
-  <p>لايوجد اعلانات مؤجرة </p>
-</div>
+    <p>لايوجد اعلانات غير مؤجرة</p>
+  </div>
 </ng-template>
