--- a/src/app/components/payedproperities/payedproperities.component.html
+++ b/src/app/components/payedproperities/payedproperities.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 100px;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input
@@ -99,7 +99,7 @@
           <td mat-cell *matCellDef="let element" class="center">
             <md-content flex layout-padding>
 
-              <p >{{element.user.name}}</p>
+              <p style="font-size:1.2em ;">{{element.user.name}}</p>
             </md-content>
           </td>
         </ng-container>
@@ -122,6 +122,6 @@
 </div>
 <ng-template #noData>
   <div class="noData">
-    <p>لايوجد اعلانات مؤجرة</p>
+    <p>لايوجد اعلانات مدفوعة</p>
   </div>
 </ng-template>
