--- a/src/app/components/pending/pending.component.html
+++ b/src/app/components/pending/pending.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container" style="margin-top: 100px;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput #search placeholder="search" (keyup)="findContact(search.value)" >
@@ -7,12 +7,12 @@
       <table mat-table [dataSource]="dataSource" matSort class="w-100 m-auto border border-5 table w-100 table-bordered">
         <!-- Position Column -->
         <ng-container matColumnDef="الاعلان">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6  h5 table-dark  p-3 color"> الاعلان </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-6   font  p-3 color"> الاعلان </th>
           <td mat-cell *matCellDef="let element" class="col-sm-6 ">
 
               <mat-card class="text-right">
-                <mat-card-title style="font-size: 1.5em; color:#383838">{{ element.title }}	</mat-card-title>
-                  <mat-card-content>{{ element.description }}	</mat-card-content>
+                <mat-card-title style="font-size: 1.3em; line-height:1.4;font-weight: 700; color:#383838">{{ element.title }}	</mat-card-title>
+                  <mat-card-content class="font short_para">{{ element.description }}	</mat-card-content>
 
                </mat-card>
 
@@ -32,7 +32,7 @@
           <td mat-cell *matCellDef="let element" class="col-sm-1 pt-5"> <a class="btn btn-dark send" [routerLink]='["/editproperty",element.id]'> تعديل</a> </td>
         </ng-container> -->
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-3 p-3 color table-dark  h5"> الاجراءات المتخذه </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-sm-1 col-md-2 p-3 color font h5"> الاجراءات المتخذه </th>
           <td mat-cell *matCellDef="let element" class=" center ">
 
 
@@ -62,6 +62,6 @@
 </div>
 <ng-template #noData>
   <div class="noData">
-  <p>لايوجد اعلانات مؤجرة </p>
+  <p>لايوجد اعلانات معلقة </p>
 </div>
 </ng-template>
