--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -1,5 +1,5 @@
 <!-- <img src=""> -->
-<div class="container  gradient-form">
+<div class="container mt-5 gradient-form">
   <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="message">
     تمت اضافة اعلان بنجاح
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
