--- a/src/app/admin/component/adver-requests/adver-requests.component.html
+++ b/src/app/admin/component/adver-requests/adver-requests.component.html
@@ -1,4 +1,4 @@
-<form class="example-form">
+<form class="example-form  mt-5">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>بحث</mat-label>
     <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
@@ -9,27 +9,27 @@
 
     <!-- Position Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header ></th>
+      <td mat-cell *matCellDef="let element ; let i =index;"> {{i+1}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="position" matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> الاعلان</th>
+      <th mat-header-cell *matHeaderCellDef class="text-center"> الاعلان</th>
       <td mat-cell *matCellDef="let element"> {{element.title}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef > التفاصيل</th>
-      <td mat-cell *matCellDef="let element"> <button type="button"  routerLink="" class="btn btn-secondary m-1"><span
+    <ng-container matColumnDef="position" matColumnDef="description" >
+      <th mat-header-cell *matHeaderCellDef class="text-center "> التفاصيل</th>
+      <td mat-cell *matCellDef="let element"> <button type="button"  routerLink="/pendingDetails/{{element.id}}" class="btn btn-secondary m-1"><span
         class="material-icons">التفاصيل</span> </button> </td>
     </ng-container>
 
    
     <!-- block Column -->
     <ng-container matColumnDef="accept">
-      <th mat-header-cell *matHeaderCellDef> قبول</th>
+      <th mat-header-cell *matHeaderCellDef class="text-center"> قبول</th>
       <td mat-cell *matCellDef="let element"> <button (click)="accept(element.id)" type="button" class="btn btn-secondary m-1"><span
             class="material-icons">قبول</span></button> </td>
 
@@ -37,7 +37,7 @@
 
     <!-- delete Column -->
     <ng-container matColumnDef="reject">
-      <th mat-header-cell *matHeaderCellDef> رفض</th>
+      <th mat-header-cell *matHeaderCellDef class="text-center"> رفض</th>
       <td mat-cell *matCellDef="let element"> <button (click)="reject(element.id)" type="button" class="btn btn-secondary m-1"><span
             class="material-icons">رفض</span></button> </td>
     </ng-container>
