--- a/src/app/admin/component/block-list/block-list.component.css
+++ b/src/app/admin/component/block-list/block-list.component.css
@@ -15,13 +15,28 @@
     overflow-x: auto;
     table-layout:auto;
   }
+  th.mat-header-cell{
+    border: none;
+    text-align: center;
+    align-items: center;
+    justify-content: center !important;
+    background-color: black;
+    color: white;
+    font-size: 1.3em;
+    text-align: center !important;
+  
+    vertical-align: middle !important;
+  } 
+
   td.mat-cell{
     padding: 4px;
+    text-align: center !important;
+  
   }
   
   button{
     background-color:#FE6F41;
-  
+    color: white;
   }
 
   
