--- a/src/app/admin/component/pending-details/pending-details.component.html
+++ b/src/app/admin/component/pending-details/pending-details.component.html
@@ -1,1 +1,118 @@
-<p>pending-details works!</p>
+<div *ngIf="!loading">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade   m-auto" data-ride="carousel">
+      <div class="carousel-inner  pt-5">
+        <div class="carousel-item active" *ngFor="let image of images let i = index" [ngClass]="{'active': i == 0 }">
+          <img [src]="image.image_name" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </button>
+  
+    </div>
+  
+  
+  
+    <div class="row">
+  
+      <mat-card class="col-sm-8 col-10 mx-auto mt-5  decription ">
+        <mat-card-title class="title">{{data.title}}</mat-card-title>
+        <h2>{{data.price}}جنيه</h2>
+        <div class="row mt-lg-4">
+          <div class="col-xs-12 col-sm-6  d-flex justify-content-between px-md-5 ">
+            <div><span class="icon-text">عدد الغرف </span> </div>
+            <div> {{data.bedroom_num}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6 d-flex justify-content-between px-md-5 ">
+            <div><span class="icon-text"> عدد السرائر</span></div>
+            <div>{{data.beds_num}}</div>
+          </div>
+        </div>
+        <div class="row mt-lg-4">
+          <div class="col-xs-12 col-sm-6 d-flex justify-content-between px-md-5 ">
+            <div><span class="icon-text"> عدد الحمامات</span></div>
+            <div>{{data.bathroom_num}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6  d-flex justify-content-between px-md-5">
+            <div><span class="icon-text"> مفروش</span></div>
+            <div>{{data.furniture }}</div>
+          </div>
+        </div>
+  
+        <div class="row mt-lg-4">
+          <div class="col-xs-12 col-sm-6 d-flex justify-content-between px-md-5 ">
+            <div><span class="icon-text">الطابق</span></div>
+            <div> {{data.level}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6   d-flex justify-content-between px-md-5">
+            <div> <span class="icon-text"> المحافظه</span></div>
+            <div>{{data.address}}</div>
+          </div>
+  
+        </div>
+        <div class="row mt-lg-4">
+          <div class="col-xs-12 col-sm-6 d-flex justify-content-between  px-md-5">
+            <div><span class="icon-text"> المنطقه</span></div>
+            <div>{{data.area}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6  d-flex justify-content-between px-md-5 ">
+            <div><span class="icon-text"> العنوان</span></div>
+            <div> {{data.address}}</div>
+          </div>
+        </div>
+        <div class="row mt-lg-4">
+  
+          <h2 class="ownerInfo">الوصف :</h2>
+          <div class="mx-3">
+            <p>{{data.description}}</p>
+  
+          </div>
+  
+  
+  
+        </div>
+  
+      </mat-card>
+  
+  
+    </div>
+  
+    <!-- owner -->
+  
+    <div class="container my-5 owner ">
+      <div class="row">
+        <div class="col-sm col-10 mx-auto  photo rounded-circle ">
+          <img [src]="data.user.image" class="rounded-circle avatar img-fluid" alt="...">
+  
+        </div>
+        <div class="col-sm col-10 mx-auto  align-items-center text-center">
+          <mat-list role="list " class="mt-4">
+            <mat-list-item role="listitem">
+              <h3 class="text-bold ownerInfo">المالك </h3>
+            </mat-list-item>
+            <mat-list-item role="listitem">{{data.user.name}}</mat-list-item>
+            <mat-list-item role="listitem">{{data.user.phone}}</mat-list-item>
+            <mat-list-item role="listitem">{{data.user.email}}</mat-list-item>
+  
+           
+  
+          </mat-list>
+        </div>
+        
+      </div>
+    </div>
+
+
+    <!-- actions -->
+    <div class="d-flex justify-content-evenly  align-content-center flex-wrap my-5 w-50 m-auto">
+      
+        <button class="btn  m-1 actions btn-lg px-5" routerLink="/requests" type="button">  رجوع</button>
+
+      
+    </div>
+  </div>
+
+  
