--- a/src/app/admin/component/renters/renters.component.css
+++ b/src/app/admin/component/renters/renters.component.css
@@ -4,8 +4,16 @@
 .example-full-width {
   width: 50%;
 }
- th.mat-header-cell{
+th.mat-header-cell{
   border: none;
+  text-align: center;
+  align-items: center;
+  justify-content: center !important;
+  background-color: black;
+  color: white;
+  font-size: 1.3em;
+  text-align: center !important;
+  vertical-align: middle !important;
 } 
 th.mat-sort-header-container {
   justify-content: center !important;
@@ -19,9 +27,12 @@ table{
 }
 td.mat-cell{
   padding: 4px;
+  text-align: center !important;
+
 }
 
 button{
   background-color:#FE6F41;
+  color: white;
 
 }
