--- a/src/app/admin/component/renters/renters.component.html
+++ b/src/app/admin/component/renters/renters.component.html
@@ -1,5 +1,5 @@
 
-   <form class="example-form">
+   <form class="example-form  mt-5">
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>بحث</mat-label>
       <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
@@ -10,19 +10,19 @@
       
           <!-- Position Column -->
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header ></th> 
+            <th mat-header-cell *matHeaderCellDef  ></th> 
             <td mat-cell *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
       
           <!-- Name Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > الاسم</th>
+            <th mat-header-cell *matHeaderCellDef  > الاسم</th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
       
           <!-- Weight Column -->
           <ng-container matColumnDef="email" class="text-center ">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > البريد الالكتروني </th>
+            <th mat-header-cell *matHeaderCellDef  > البريد الالكتروني </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
       
@@ -87,6 +87,6 @@
 
 
       
-<ng-template #alter >
+<ng-template #alter  >
  <h1 class="bg-light text-center">لا يوجد مستأجرين حاليا</h1>
 </ng-template>
