--- a/src/app/shared/component/not-found/not-found.component.html
+++ b/src/app/shared/component/not-found/not-found.component.html
@@ -1,4 +1,4 @@
- <div>
-    <h1 class="m-5 font-weight-bold">404 page not found</h1>
+ <div  style="  margin-top: 150px; ">
+    <h1 class="m-5 font-weight-bold ">404   غير موجود </h1>
 
 </div> 
