--- a/src/app/components/pending/pending.component.html
+++ b/src/app/components/pending/pending.component.html
@@ -12,7 +12,7 @@
 
               <mat-card class="text-right">
                 <mat-card-title style="font-size: 1.3em; line-height:1.4;font-weight: 700; color:#383838">{{ element.title }}	</mat-card-title>
-                  <mat-card-content class="font short_para">{{ element.description }}	</mat-card-content>
+                  <!-- <mat-card-content class="font short_para">{{ element.description }}	</mat-card-content> -->
 
                </mat-card>
 
