--- a/src/app/admin/component/accepted-ads/accepted-ads.component.html
+++ b/src/app/admin/component/accepted-ads/accepted-ads.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 100px;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input
@@ -9,12 +9,12 @@
     />
   </mat-form-field>
   <div class="row w-100" *ngIf="length > 0; else noData">
-    <div class="col-sm-12">
+    <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm">
       <table
         mat-table
         [dataSource]="dataSource"
         matSort
-        class="mat-elevation-z8 col-sm-12 table"
+        class="w-100 m-auto border border-5 table w-100 table-bordered"
       >
         <!-- Position Column -->
         <ng-container matColumnDef="الاعلان">
@@ -32,11 +32,11 @@
               <div class="card-body">
                 <h5
                   class="card-title"
-                  style="font-size: 1.3em; color: #fe6f41 !important"
+                  style="font-size: 1.3em; font-weight: 600;"
                 >
                   {{ element.title }}
                 </h5>
-                <p class="card-text">{{ element.description }}</p>
+                <!-- <p class="card-text">{{ element.description }}</p> -->
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
               </div>
             </div>
@@ -52,16 +52,23 @@
             mat-header-cell
             *matHeaderCellDef
             mat-sort-header
-            class="col-sm-1 text-center table-dark h5 p-3 color"
+            class="col-sm-2 h5 p-3 color"
             scope="row"
           >
-            عرض
+            الاجراءات المتخذة
           </th>
           <td mat-cell *matCellDef="let element" class="center pt-2">
             <a mat-raised-button class="send" (click)="show(element.id)">عرض</a>
+            <a
+            mat-raised-button
+            class="send"
+              (click)="delete(element.id)"
+            >
+              حذف</a
+            >
           </td>
         </ng-container>
-        <ng-container matColumnDef="حذف">
+        <!-- <ng-container matColumnDef="حذف">
           <th
             mat-header-cell
             *matHeaderCellDef
@@ -79,7 +86,7 @@
               حذف</a
             >
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displaycolumns"></tr>
