--- a/src/app/admin/component/rejectedd-ads/rejectedd-ads.component.html
+++ b/src/app/admin/component/rejectedd-ads/rejectedd-ads.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:100px ;">
   <mat-form-field>
     <mat-label>Filter</mat-label>
     <input
@@ -36,7 +36,7 @@
                 >
                   {{ element.title }}
                 </h5>
-                <p class="card-text">{{ element.description }}</p>
+                <!-- <p class="card-text">{{ element.description }}</p> -->
                 <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
               </div>
             </div>
