--- a/src/app/components/not-rented-yet/not-rented-yet.component.html
+++ b/src/app/components/not-rented-yet/not-rented-yet.component.html
@@ -33,7 +33,7 @@
             <mat-card-title style="font-size: 1.5em; color: #383838"
               >{{ element.title }}
             </mat-card-title>
-            <mat-card-content>{{ element.description }} </mat-card-content>
+            <!-- <mat-card-content>{{ element.description }} </mat-card-content> -->
           </mat-card>
         </td>
       </ng-container>
