--- a/src/app/components/rented/rented.component.html
+++ b/src/app/components/rented/rented.component.html
@@ -12,7 +12,7 @@
 
               <mat-card class="text-right">
                 <mat-card-title style="font-size: 1.5em; color:#383838">{{ element.title }}	</mat-card-title>
-                  <mat-card-content>{{ element.description }}	</mat-card-content>
+                  <!-- <mat-card-content>{{ element.description }}	</mat-card-content> -->
 
                </mat-card>
 
