--- a/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
+++ b/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
@@ -55,7 +55,7 @@
 
 <div class="container ">
   <div class="row">
-    <div class="col" *ngFor="let ads of advertisment">
+    <div class="col-sm-12 col-md-4" *ngFor="let ads of advertisment">
      <div class="" *ngFor="let item of ads">
       <div class="card shadow-sm m-3">
         <div class="photo">
