--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
     <div class="container py-5">
       <div class="row h-100 align-items-center py-5" *ngFor="let item of projectData">
         <div class="col-lg-6"  >
-          <h1 class="display-4"> تعرف علينا</h1>
+          <!-- <h1 class="display-4"> تعرف علينا</h1> -->
           <h2 class="display-4">{{item.title}}</h2>
           <p class="lead text-muted mb-0">{{item.description}}</p>        
         </div>
