--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -1,14 +1,18 @@
 <mat-sidenav-container class="mt-5 p-3" >
+ 
+
     <mat-sidenav #sidenav="matSidenav" mode="side"  opened>
-      <img
-        class="avatar mat-elevation-z8"
-       [src] ="image"/>
-       <mat-icon>camera_alt</mat-icon>
+        <form action="" [formGroup]="images">
+          <img class="avatar mat-elevation-z8" [src] ="profile.image"/>
+          <label for="fileInput">
+        <mat-icon class="imgp">camera_alt</mat-icon>
+        </label>
+        <input id="fileInput" type="file" formControlName="image" (change)="fileInput($event)" name="image" style="display:none;" />
       <h2 class="name">{{name}}</h2>
-
-
+    </form>
       <mat-divider></mat-divider>
-      <ul class="nav flex-column">
+ 
+      <ul class="nav flex-column" *ngIf="isAdmin ||  isSuperAdmin">
 
         <li class="nav-item">
           <a class="nav-link" routerLink="adminhome">
@@ -142,10 +146,16 @@
       <mat-divider></mat-divider>
       <ul class="nav flex-column">
 
-        <li class="nav-item" *ngIf="isRenter">
+        <!-- <li class="nav-item" *ngIf="isRenter">
           <a class="nav-link" routerLink="userfavourites">
             <span data-feather="file"></span>
             المفضله
+          </a>
+        </li> -->
+        <li class="nav-item" *ngIf="isRenter">
+          <a class="nav-link" routerLink="payed-for-user">
+            <span data-feather="file"></span>
+            الاعلانات المدفوعه
           </a>
         </li>
         <li class="nav-item">
