--- a/src/app/shared/component/editpassword/editpassword.component.html
+++ b/src/app/shared/component/editpassword/editpassword.component.html
@@ -3,6 +3,7 @@
     <strong>تم تعديل كلمة المرور بنجاح</strong>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
+  <div class="text-danger text-center" >{{passNotchaned}}</div>
   <form
     class="form-signin"
     [formGroup]="passwdreset"
