--- a/src/app/admin/component/reports/reports.component.html
+++ b/src/app/admin/component/reports/reports.component.html
@@ -1,8 +1,7 @@
-
+<!--
 
 <div class="container mt-3">
     <h2>All Reports</h2>
-    <!-- <p>The .table-striped class adds zebra-stripes to a table:</p>             -->
     <table class="table table-striped">
       <thead>
         <tr>
@@ -24,4 +23,118 @@
         </tr>
       </tbody>
     </table>
+  </div> -->
+
+  <div class="container" style="margin-top: 100px;">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        #search
+        placeholder="search"
+        (keyup)="findContact(search.value)"
+      />
+    </mat-form-field>
+    <div class="row w-100" *ngIf="length > 0; else noData">
+      <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm">
+        <table
+          mat-table
+          [dataSource]="dataSource"
+          matSort
+          class="w-100 m-auto border border-5 table w-100 table-bordered"
+        >
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              mat-sort-header
+              class="col-sm-2 h5 color p-3"
+            >
+              الاسم
+            </th>
+            <td mat-cell *matCellDef="let element" class="col center">
+
+                    {{ element.name}}
+
+            </td>
+          </ng-container>
+
+
+          <ng-container matColumnDef="email">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              mat-sort-header
+              class="col-sm-2 h5 color p-3"
+            >
+              البريد الالكتروني
+            </th>
+            <td mat-cell *matCellDef="let element" class="col center">
+
+                    {{ element.email}}
+
+            </td>
+          </ng-container>
+
+
+          <ng-container matColumnDef="phone">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              mat-sort-header
+              class="col-sm-2 h5 color p-3"
+            >
+               الهاتف
+            </th>
+            <td mat-cell *matCellDef="let element" class="col center">
+
+                    {{ element.phone}}
+
+            </td>
+          </ng-container>
+
+
+
+          <ng-container matColumnDef="action">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              mat-sort-header
+              class="col-sm-3 h5 p-3 color"
+              scope="row"
+            >
+              الاجراءات المتخذة
+            </th>
+            <td mat-cell *matCellDef="let element" class="center pt-2">
+              <a mat-raised-button class="send" (click)="showReport(element.id)">عرض</a>
+              <a
+              mat-raised-button
+              class="send"
+              (click)="deleteReport(element.id)"
+              >
+                حذف</a
+              >
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displaycolumns"></tr>
+        </table>
+      </div>
+    </div>
+    <mat-paginator
+      [length]="10"
+      [pageSize]="10"
+      [pageSizeOptions]="[10]"
+      aria-label="select page"
+      showFirstLastButtons
+    >
+    </mat-paginator>
+    <div></div>
   </div>
+  <ng-template #noData>
+    <div class="noData">
+      <p>لايوجد بلاغات</p>
+    </div>
+  </ng-template>
