--- a/src/app/admin/component/pending-details/pending-details.component.html
+++ b/src/app/admin/component/pending-details/pending-details.component.html
@@ -38,7 +38,7 @@
           </div>
           <div class="col-xs-12 col-sm-6  d-flex justify-content-between px-md-5">
             <div><span class="icon-text"> مفروش</span></div>
-            <div>{{data.furniture }}</div>
+            <div>{{data.furniture | yesOrNo }}</div>
           </div>
         </div>
   
