--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,62 +1,77 @@
-<div *ngIf="!loading" class="pt-5 mt-5">
-    <div class="container  mt-5 p-5 search d-flex justify-content-center align-items-center ">
-        <div class="row  w-75 justify-content-center m-auto   align-items-center">
-            <div class="col d-flex justify-content-center align-items-center  bg-white ">
-                <mat-form-field appearance="fill" class="mt-3 ">
-                    <mat-label>الموقع</mat-label>
-                    <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
-                        <mat-option value="all">الكل</mat-option>
-                        <mat-option *ngFor="let location of allLocations" [value]="location.id">
-                            {{location.name}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
+<div *ngIf="!loading" class=" mt-5">
+    <div  class="search ">
+        <div class="mb-5">
+            <h2> معنا الايجار أسهل </h2>
+        </div>
+       
+        <h4 > هدفنا نوصلك للمكان المناسب بالسعر المناسب وبأقل مجهود </h4>
+
+        <!-- <a href="#advert"> الاعلانات </a> -->
+      
+    </div>
+    <!-- <div class="line  mt-5 m-auto ">
+    </div>
+    <h2 class="text-center mt-3">الاعلانات </h2> -->
+
+    <div class="bg-light w-100 mt-5">
+
+        <div class="container   p-5 d-flex justify-content-center align-items-center ">
+            <div class="row  w-75 justify-content-center m-auto   align-items-center">
+                <div class="col d-flex justify-content-center align-items-center  bg-white ">
+                    <mat-form-field appearance="fill" class="mt-3 ">
+                        <mat-label>الموقع</mat-label>
+                        <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
+                          
+                            <mat-option *ngFor="let location of allLocations" [value]="location.id">
+                                {{location.name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col d-flex justify-content-center align-items-center  bg-white ">
+                    <mat-form-field appearance="fill" class="mt-3">
+                        <mat-label>النوع</mat-label>
+                        <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
+                          
+                            <mat-option value="apartment">شقه</mat-option>
+                            <mat-option value="room">غرفه</mat-option>
+                            <mat-option value="studio">استوديو</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col d-flex justify-content-center align-items-center   bg-white ">
+                    <mat-form-field appearance="fill" class="mt-3">
+                        <mat-label>عدد الغرف</mat-label>
+                        <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
+                          
+                            <mat-option value="1">1</mat-option>
+                            <mat-option value="2">2</mat-option>
+                            <mat-option value="3">3</mat-option>
+                            <mat-option value="4">4</mat-option>
+                            <mat-option value="5">5</mat-option>
+                            <mat-option value="6">6</mat-option>
+    
+    
+    
+    
+    
+    
+    
+                        </mat-select>
+                    </mat-form-field>
+                </div>
             </div>
-            <div class="col d-flex justify-content-center align-items-center  bg-white ">
-                <mat-form-field appearance="fill" class="mt-3">
-                    <mat-label>النوع</mat-label>
-                    <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
-                        <mat-option value="all">الكل </mat-option>
-                        <mat-option value="apartment">شقه</mat-option>
-                        <mat-option value="room">غرفه</mat-option>
-                        <mat-option value="studio">استوديو</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div class="col d-flex justify-content-center align-items-center   bg-white ">
-                <mat-form-field appearance="fill" class="mt-3">
-                    <mat-label>عدد الغرف</mat-label>
-                    <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
-                        <mat-option value="all">الكل</mat-option>
-                        <mat-option value="1">1</mat-option>
-                        <mat-option value="2">2</mat-option>
-                        <mat-option value="3">3</mat-option>
-                        <mat-option value="4">4</mat-option>
-                        <mat-option value="5">5</mat-option>
-                        <mat-option value="6">6</mat-option>
-
-
-
-
-
-
-
-                    </mat-select>
-                </mat-form-field>
-            </div>
+    
+    
         </div>
 
-
     </div>
 
-    <div class="line  mt-5 m-auto ">
-    </div>
-    <h2 class="text-center mt-3">الاعلانات </h2>
-
+   
     
 
 
-        <div class="album py-5 ">
+        <div class="album py-5 " id="advert" *ngIf=" allAdvert.length >0 else alter">
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
 
@@ -69,6 +84,10 @@
             </div>
             <pagination-controls previousLabel="السابق" nextLabel="التالي" class="text-center" (pageChange)="page = $event" *ngIf="totalNumber>9"></pagination-controls>
 
+        </div>
+
+        <div #alter class="p-5 text-center ">
+                 <h2> غير متوفر حاليا </h2>
         </div>
 
 <app-footer> </app-footer>
