--- a/src/app/shared/component/footer/footer.component.css
+++ b/src/app/shared/component/footer/footer.component.css
@@ -11,3 +11,12 @@ footer a:hover{
         cursor: pointer;
 }
 
+h4{
+        font-size: 2rem;
+        color: #FE6F41;
+        font-weight: bold;
+
+}
+h5{
+        font-weight: bold;
+}
