--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -8,8 +8,12 @@
     <div class="container p-1">
       <!--Grid row-->
       <div class="row mt-1">
-        
-        <div class=" col-md-6 mb-1 mb-md-0">
+        <div class=" col-md-4 mb-1 mb-md-0 text-center mt-4">
+          <h4>سكن</h4>
+          <h5>مكان أفضل وفرص أكتر</h5>
+        </div>
+         <!--Grid column-->
+        <div class=" col-md-4 mb-1 mb-md-0">
           
           <div class="mt-2 m-auto text-center  justify-content-center align-items-center p-3">
             <!-- Facebook -->
@@ -23,10 +27,10 @@
         </a>
           </div>
         </div>
-        <!--Grid column-->
+       
 
         <!--Grid column-->
-        <div class="col-md-6 mb-1 mb-md-0">
+        <div class="col-md-4 mb-1 mb-md-0">
 
           <ul class="fa-ul mt-4" style="margin-left: 1.65em;">
             
@@ -42,7 +46,7 @@
           </ul>
         </div>
         <!--Grid column-->
-        
+       
       
       </div>
       <!--Grid row-->
