--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -13,7 +13,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="adminhome">
             <span data-feather="file"></span>
-            لوحة التحكم
+          الصفحه الرئيسيه
           </a>
         </li>
         <li class="nav-item" *ngIf="  isSuperAdmin">
@@ -101,7 +101,12 @@
 <!-- owner  -->
       <mat-divider *ngIf="isOwner"></mat-divider>
       <ul class="nav flex-column" *ngIf="isOwner">
-
+        <li class="nav-item" >
+          <a class="nav-link" routerLink="/owner">
+            <span data-feather="file"></span>
+            الصفحه الرئيسيه
+          </a>
+        </li>
         <li class="nav-item" >
           <a class="nav-link" routerLink="/addProperity">
             <span data-feather="file"></span>
@@ -141,7 +146,12 @@
 
       <mat-divider></mat-divider>
       <ul class="nav flex-column">
-
+        <li class="nav-item" *ngIf="isRenter">
+          <a class="nav-link" routerLink="/renter">
+            <span data-feather="file"></span>
+            الصفحه الرئيسيه
+          </a>
+        </li>
         <li class="nav-item" *ngIf="isRenter">
           <a class="nav-link" routerLink="userfavourites">
             <span data-feather="file"></span>
@@ -171,7 +181,7 @@
       *ngIf="sidenav.mode === 'over'"
       (click)="sidenav.toggle()"
     >
-    <span>  قائمة التحكم  <mat-icon *ngIf="!sidenav.opened" class="mx-2" style="position:relative; top:5px;">apps</mat-icon></span>
+    <span class="list mat-elevation-z8">  قائمة التحكم  <mat-icon *ngIf="!sidenav.opened" class="mx-2" style="position:relative; top:5px;">apps</mat-icon></span>
 <!--
       <mat-icon *ngIf="!sidenav.opened"> apps </mat-icon>
       <mat-icon *ngIf="sidenav.opened"> apps </mat-icon> -->
