--- a/src/app/users/component/renter/renter.component.html
+++ b/src/app/users/component/renter/renter.component.html
@@ -1,57 +1,59 @@
-<div *ngIf="!loading" class="pt-5 ">
-  <div class="container   search d-flex justify-content-center align-items-center ">
-    <div class="row  w-75 justify-content-center m-auto   align-items-center">
-      <div class="col d-flex justify-content-center align-items-center  bg-white ">
-        <mat-form-field appearance="fill" class="mt-3 ">
-          <mat-label>الموقع</mat-label>
-          <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
-            <mat-option value="all">الكل</mat-option>
-            <mat-option *ngFor="let location of allLocations" [value]="location.id">
-              {{location.name}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col d-flex justify-content-center align-items-center  bg-white ">
-        <mat-form-field appearance="fill" class="mt-3">
-          <mat-label>النوع</mat-label>
-          <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
-            <mat-option value="all">الكل </mat-option>
-            <mat-option value="apartment">شقه</mat-option>
-            <mat-option value="room">غرفه</mat-option>
-            <mat-option value="studio">استوديو</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col d-flex justify-content-center align-items-center   bg-white ">
-        <mat-form-field appearance="fill" class="mt-3">
-          <mat-label>عدد الغرف</mat-label>
-          <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
-            <mat-option value="all">الكل</mat-option>
-            <mat-option value="1">1</mat-option>
-            <mat-option value="2">2</mat-option>
-            <mat-option value="3">3</mat-option>
-            <mat-option value="4">4</mat-option>
-            <mat-option value="5">5</mat-option>
-            <mat-option value="6">6</mat-option>
+<div *ngIf="!loading"  >
+  <div  class="search ">
+        
+    <div class="container   p-5 d-flex justify-content-center align-items-center ">
+        <div class="row  w-75 justify-content-center m-auto   align-items-center">
+            <div class="col d-flex justify-content-center align-items-center  bg-white ">
+                <mat-form-field appearance="fill" class="mt-3 ">
+                    <mat-label>الموقع</mat-label>
+                    <mat-select [disableOptionCentering]="true" id="eman" (selectionChange)="getFilterLocation($event)">
+                        <mat-option *ngFor="let location of allLocations" [value]="location.id">
+                            {{location.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center  bg-white ">
+                <mat-form-field appearance="fill" class="mt-3">
+                    <mat-label>النوع</mat-label>
+                    <mat-select [disableOptionCentering]="true" (selectionChange)="getFilterType($event)">
+                        <mat-option value="apartment">شقه</mat-option>
+                        <mat-option value="room">غرفه</mat-option>
+                        <mat-option value="studio">استوديو</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center   bg-white ">
+                <mat-form-field appearance="fill" class="mt-3">
+                    <mat-label>عدد الغرف</mat-label>
+                    <mat-select [disableOptionCentering]="true" id="ddlFruits" (selectionChange)="getFilterBeds($event)">
+                        <mat-option value="1">1</mat-option>
+                        <mat-option value="2">2</mat-option>
+                        <mat-option value="3">3</mat-option>
+                        <mat-option value="4">4</mat-option>
+                        <mat-option value="5">5</mat-option>
+                        <mat-option value="6">6</mat-option>
 
 
 
 
 
-          </mat-select>
-        </mat-form-field>
-      </div>
+
+
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </div>
+
+
     </div>
-
-
-  </div>
+</div>
 
   <div class="line  mt-5 m-auto ">
   </div>
   <h2 class="text-center mt-3">الاعلانات </h2>
 
-  <div class="album pt-5 ">
+  <div class="album pt-5 " *ngIf="advertisment.length>0 else alter">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
 
@@ -64,17 +66,7 @@
               <img [src]="advertisment.advertisement_image[0].image_name" height="200px" width="100%"
                 alt="{{advertisment.advertisement_image[0].image_name}}" routerLink="/details/{{advertisment.id}}">
 
-              <h5 class="favorite " mat-icon-button (click)="toggleSelected(advertisment.id)">
-
-                <mat-icon class="selected" *ngIf="selected" aria-label="Example icon-button with a heart icon">
-                  favorite
-                </mat-icon>
-
-                <mat-icon class="notselected" *ngIf="!selected" aria-label="Example icon-button with a heart icon">
-                  favorite_border
-                </mat-icon>
-
-              </h5>
+             
             </div>
 
             <div class="card-body bg-light " routerLink="/details/{{advertisment.id}}">
@@ -117,6 +109,9 @@
       *ngIf="totalNumber>9"></pagination-controls>
 
   </div>
+  <div #alter class="p-5 text-center ">
+    <h2> غير متوفر حاليا </h2>
+</div>
 
   <app-footer> </app-footer>
 </div>
