edit payed advertisment

--- a/src/app/components/payedproperities/payedproperities.component.html
+++ b/src/app/components/payedproperities/payedproperities.component.html
@@ -72,7 +72,7 @@
 
           <a mat-raised-button
             class="send"
-            [routerLink]="['/editproperty', element.advertisement.id]"
+            [routerLink]="['/edit-payed', element.advertisement.id]"
           >
             تعديل</a
           >
