--- a/src/app/auth/component/mail-confirm/mail-confirm.component.html
+++ b/src/app/auth/component/mail-confirm/mail-confirm.component.html
@@ -38,7 +38,7 @@
                     <strong *ngIf="confirmCode.controls['token'].errors['pattern']">الرقم غير صحيح</strong>
                   </div>
                   <div class="text-center mt-5">
-                    <input class="send" type="submit" value="submit" 
+                    <input class="send form-control" type="submit" value="تفعيل"
                       (click)="onsubmit()" />
                   </div>
                 </form>
