--- a/src/app/admin/component/admins/admins.component.html
+++ b/src/app/admin/component/admins/admins.component.html
@@ -1,86 +1,84 @@
-<form class="example-form mt-5">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>بحث</mat-label>
-    <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
-  </mat-form-field>
-</form>
-    <div class="mat-elevation mt-2  m-auto table-responsive" *ngIf="length>0 else alter">
-        <table mat-table [dataSource]="dataSource"  matSort  class="m-auto border border-5  table table-bordered ">
-      
-          <!-- Position Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header ></th> 
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          </ng-container>
-      
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef  > الاسم</th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-      
-          <!-- Weight Column -->
-          <ng-container matColumnDef="email" class="text-center ">
-            <th mat-header-cell *matHeaderCellDef  > البريد الالكتروني </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-          </ng-container>
-      
-          <!-- Symbol Column
-          <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef  > النشاط</th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-          </ng-container> -->
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef  > الهاتف</th>
-            <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-          </ng-container>
+<div *ngIf="!loading">
+  <form class="example-form mt-5">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>بحث</mat-label>
+      <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
+    </mat-form-field>
+  </form>
+      <div class="mat-elevation mt-2  m-auto table-responsive" >
+          <table mat-table [dataSource]="dataSource"  matSort  class="m-auto border border-5  table table-bordered ">
+        
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header ></th> 
+              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef  > الاسم</th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+        
+            <!-- Weight Column -->
+            <ng-container matColumnDef="email" class="text-center ">
+              <th mat-header-cell *matHeaderCellDef  > البريد الالكتروني </th>
+              <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+        
+            <!-- Symbol Column
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef  > النشاط</th>
+              <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            </ng-container> -->
+  
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="phone">
+              <th mat-header-cell *matHeaderCellDef  > الهاتف</th>
+              <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+            </ng-container>
+  
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="gender">
+              <th mat-header-cell *matHeaderCellDef  > النوع</th>
+              <td mat-cell *matCellDef="let element"> {{element.gender | gender}} </td>
+            </ng-container>
+  
+           
+  
+             <!-- delete Column -->
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> حذف</th>
+              <td mat-cell *matCellDef="let element">  <button  type="button" (click)="delete(element.id)" class="btn  m-1"><span class="material-icons">delete</span></button> </td>
+            </ng-container>
+           
+           
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        
+          <mat-paginator  #paginator [length]="10"
+          [pageSize]="10" showFirstLastButtons
+          [pageSizeOptions]="[5,2,10]"
+          aria-label="Select page"
+          aria-label="Select page of periodic elements">
+                        
+          </mat-paginator>
+        </div>
+</div>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="gender">
-            <th mat-header-cell *matHeaderCellDef  > النوع</th>
-            <td mat-cell *matCellDef="let element"> {{element.gender | gender}} </td>
-          </ng-container>
 
-         
-
-           <!-- delete Column -->
-          <ng-container matColumnDef="delete">
-            <th mat-header-cell *matHeaderCellDef> حذف</th>
-            <td mat-cell *matCellDef="let element">  <button  type="button" (click)="delete(element.id)" class="btn  m-1"><span class="material-icons">delete</span></button> </td>
-          </ng-container>
-         
-         
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      
-        <mat-paginator  #paginator [length]="10"
-        [pageSize]="10" showFirstLastButtons
-        [pageSizeOptions]="[5,2,10]"
-        aria-label="Select page"
-        aria-label="Select page of periodic elements">
-                      
-        </mat-paginator>
-      </div>
-<!-- 
        <div class="justify-content-center align-items-center" *ngIf="loading">
         <mat-spinner class="text-center w-50  mt-5 pt-5 " style="top: 30px;"></mat-spinner>
       
-      </div>  -->
-<!-- 
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>'هل تريد تأكيد الحذف ؟' </p>
-    <button type="button" class="btn btn-default" (click)="confirm()" >Yes</button>
-    <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
-  </div>
-</ng-template> -->
+      </div>  
+
+
 
 
       
-<ng-template #alter >
+<!-- <ng-template #alter >
  <h1 class="bg-light text-center">لا يوجد مسؤولين  حاليا</h1>
-</ng-template>
+</ng-template> -->
