--- a/src/app/admin/component/adver-requests/adver-requests.component.css
+++ b/src/app/admin/component/adver-requests/adver-requests.component.css
@@ -6,7 +6,7 @@
   text-align: center;
   align-items: center;
   justify-content: center !important;
-  background-color: black;
+  background-color: rgba(0,0,0,.55);
   color: white;
   font-size: 1.3em;
   vertical-align: middle !important;
