--- a/src/app/admin/component/adver-requests/adver-requests.component.html
+++ b/src/app/admin/component/adver-requests/adver-requests.component.html
@@ -1,60 +1,73 @@
-<form class="example-form  mt-5">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>بحث</mat-label>
-    <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
-  </mat-form-field>
-</form>
-<div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " *ngIf="length>0 else alter">
-  <table mat-table [dataSource]="dataSource" matSort class="m-auto border border-5 table w-100 table-bordered">
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header ></th>
-      <td mat-cell *matCellDef="let element ; let i =index;"> {{i+1}} </td>
-    </ng-container>
+<div *ngIf="!loading">
+  <form class="example-form  mt-5">
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>بحث</mat-label>
+      <input matInput placeholder="ادخل الاسم"  #name (keyup)="findByName(name)">
+    </mat-form-field>
+  </form>
+  <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " >
+    <table mat-table [dataSource]="dataSource" matSort class="m-auto border border-5 table w-100 table-bordered">
+  
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header ></th>
+        <td mat-cell *matCellDef="let element ; let i =index;"> {{i+1}} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="position" matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> الاعلان</th>
+        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+      </ng-container>
+  
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="position" matColumnDef="description" >
+        <th mat-header-cell *matHeaderCellDef class="text-center "> التفاصيل</th>
+        <td mat-cell *matCellDef="let element"> <button type="button"  routerLink="/pendingDetails/{{element.id}}" class="btn btn-secondary m-1"><span
+          class="material-icons">التفاصيل</span> </button> </td>
+      </ng-container>
+  
+     
+      <!-- block Column -->
+      <ng-container matColumnDef="accept">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> قبول</th>
+        <td mat-cell *matCellDef="let element"> <button (click)="accept(element.id)" type="button" class="btn btn-secondary m-1"><span
+              class="material-icons">قبول</span></button> </td>
+  
+      </ng-container>
+  
+      <!-- delete Column -->
+      <ng-container matColumnDef="reject">
+        <th mat-header-cell *matHeaderCellDef class="text-center"> رفض</th>
+        <td mat-cell *matCellDef="let element"> <button (click)="reject(element.id)" type="button" class="btn btn-secondary m-1"><span
+              class="material-icons">رفض</span></button> </td>
+      </ng-container>
+  
+  
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator #paginator [length]="10" [pageSize]="10" showFirstLastButtons [pageSizeOptions]="[5,2,10]"
+      aria-label="Select page" aria-label="Select page of periodic elements">
+  
+    </mat-paginator>
+  </div>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="position" matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef class="text-center"> الاعلان</th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="position" matColumnDef="description" >
-      <th mat-header-cell *matHeaderCellDef class="text-center "> التفاصيل</th>
-      <td mat-cell *matCellDef="let element"> <button type="button"  routerLink="/pendingDetails/{{element.id}}" class="btn btn-secondary m-1"><span
-        class="material-icons">التفاصيل</span> </button> </td>
-    </ng-container>
-
-   
-    <!-- block Column -->
-    <ng-container matColumnDef="accept">
-      <th mat-header-cell *matHeaderCellDef class="text-center"> قبول</th>
-      <td mat-cell *matCellDef="let element"> <button (click)="accept(element.id)" type="button" class="btn btn-secondary m-1"><span
-            class="material-icons">قبول</span></button> </td>
-
-    </ng-container>
-
-    <!-- delete Column -->
-    <ng-container matColumnDef="reject">
-      <th mat-header-cell *matHeaderCellDef class="text-center"> رفض</th>
-      <td mat-cell *matCellDef="let element"> <button (click)="reject(element.id)" type="button" class="btn btn-secondary m-1"><span
-            class="material-icons">رفض</span></button> </td>
-    </ng-container>
-
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator #paginator [length]="10" [pageSize]="10" showFirstLastButtons [pageSizeOptions]="[5,2,10]"
-    aria-label="Select page" aria-label="Select page of periodic elements">
-
-  </mat-paginator>
 </div>
 
+
+
+
+<div class="justify-content-center align-items-center" *ngIf="loading">
+  <mat-spinner class="text-center w-50  mt-5 pt-5 " style="top: 30px;"></mat-spinner>
+
+</div>  
+
+<!-- 
 <ng-template #alter >
   <h1 class="bg-light text-center">لا يوجد طلبات اعلانات حاليا</h1>
  </ng-template>
- 
+  -->
