--- a/src/app/admin/component/owners/owners.component.css
+++ b/src/app/admin/component/owners/owners.component.css
@@ -12,7 +12,7 @@ th.mat-header-cell{
   text-align: center;
   align-items: center;
   justify-content: center !important;
-  background-color: black;
+  background-color: rgba(0,0,0,.55);
   color: white;
   font-size: 1.3em;
   text-align: center !important;
