--- a/src/app/shared/component/cart-details/cart-details.component.html
+++ b/src/app/shared/component/cart-details/cart-details.component.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-xs-12 col-sm-6   d-flex justify-content-between px-md-5">
           <div> <span class="icon-text"> المحافظه</span></div>
-          <div>{{data.address}}</div>
+          <div>{{result.city.name}}</div>
         </div>
 
       </div>
