payed ads for renter

--- a/src/app/components/add-properity/add-properity.component.html
+++ b/src/app/components/add-properity/add-properity.component.html
@@ -398,7 +398,7 @@
 
     <div class="text-center mt-5">
 
-      <input class="send" type="submit" value="submit" (click)="onsubmit()"/>
+      <input class="send" type="submit" value="إضافة اعلان" (click)="onsubmit()"/>
     </div>
 
 
