--- a/src/app/components/update-properity-advertising/update-properity-advertising.component.html
+++ b/src/app/components/update-properity-advertising/update-properity-advertising.component.html
@@ -492,7 +492,7 @@
 
 
     <div class="text-center mt-5">
-      <input class="send" type="submit" value="submit" (click)="onsubmit()"/>
+      <input class="send" type="submit" value="تعديل" (click)="onsubmit()"/>
     </div>
   </form>
 
