--- a/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
+++ b/src/app/components/userpayed-rented-ads/userpayed-rented-ads.component.html
@@ -1,103 +1,145 @@
-<!-- <div class="album pt-5">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
-      <div class="col" *ngFor="let item of ads">
-        <div *ngIf="let advertisment of item">
-          <div class="card shadow-sm m-3">
-            <div class="photo">
-              <img
-                [src]="advertisment.advertisement_image[0].image_name"
-                height="200px"
-                width="100%"
-                alt="{{ advertisment.advertisement_image[0].image_name }}"
-              />
-            </div>
+<!-- <div class="container" style="margin-top: 100px;">
 
-            <div
-              class="card-body bg-light"
-              routerLink="/details/{{ advertisment.id }}"
-            >
-              <div class="container">
-                <div class="row">
-                  <div class="col px-3 py-2">
-                    <div class="d-flex flex-row justify-content-between">
-                      <p class="mb-2 text-muted">{{ advertisment.type }}</p>
-                      <div
-                        class="d-flex flex-row"
-                        *ngIf="advertisment.ratings_count > 0"
-                      >
-                        <mat-icon style="font-size: large">star</mat-icon>
-                        <p>{{ advertisment.ratings_avg_count }}</p>
-                        <p>({{ advertisment.ratings_count }})</p>
-                      </div>
-                    </div>
-                    <h3 class="mb-0 title">{{ advertisment.title }}</h3>
-                    <h3 class="mb-0 price">{{ advertisment.price }}جنيه</h3>
-                    <div
-                      class="d-flex justify-content-between align-items-center"
-                    >
-                      <small class="text-muted">
-                        <span class="material-icons">location_on</span>
-                        {{ advertisment.address }}</small
-                      >
-                    </div>
+  <div class="mat-elevation-z8 mt-2  m-auto table-responsive table-responsive-sm " *ngIf="length > 0; else noData">
 
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        matSort
+        class="w-100 m-auto border border-5 table w-100 table-bordered"
+      >
+        <ng-container matColumnDef="الاعلان">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            class="color col-md-5"
+          >
+          <h3  style="font-weight: 800;">الاعلان </h3>
+
+
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <mat-card class="text-right">
+              <mat-card-title style="font-size: 1.5em; color:#383838">{{ element.title }}	</mat-card-title>
+
+             </mat-card>
+
+
+          </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="حذف">
+          <th class="color"
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          >
+          <h3 style="font-weight: 800; width:100%;"  >الاجرأت المتخذة</h3>
+        </th>
+        <td mat-cell *matCellDef="let element" class="center">
+          <button mat-raised-button class="send m-2" (click)="delete(element.id)">حذف</button>
+
+          <a mat-raised-button
+            class="send"
+            [routerLink]="['/edit-payed', element.id]"
+          >
+            تعديل</a
+          >
+        </td>
+
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displaycolumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displaycolumns"></tr>
+      </table>
+
   </div>
+
+  <mat-paginator
+    [length]="10"
+    [pageSize]="10"
+    [pageSizeOptions]="[10]"
+    aria-label="select page"
+    showFirstLastButtons
+  >
+  </mat-paginator>
+  <div></div>
+</div>
+<ng-template #noData>
+  <div class="noData">
+    <p>لايوجد اعلانات مدفوعة</p>
+  </div>
+</ng-template> -->
+<!-- <p>qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq</p>
+<div style="margin-top: 100px;" *ngFor="let itms of advertisment"
+>
+<p>pppppppppppppppppppppppppppppppppppp</p>
+<div *ngFor="let ad of itms">
+<p>{{ad.title}}</p>
+<p>{{ad.payment[0].amount}}</p>
+<p>{{result.date}}</p>
+<p>{{result.expired}}</p>
+
+</div>
+
+</div>
+<div class="container mt-3 col-lg-6 col-sm-12" *ngFor="let itms of advertisment">
+  <table class="table table-striped" >
+    <thead>
+      <tr>
+        <th>الاعلان</th>
+
+        <th>المبلغ المدفوع</th>
+
+        <th>تاريخ اخر دفع</th>
+
+        <th> تاريخ السداد القادم</th>
+      </tr>
+    </thead>
+
+      <tr *ngFor="let ad of itms">
+          <td>{{ad.title}}</td>
+          <td>{{ad.payment[0].amount}}</td>
+          <td>{{result.date}}</td>
+          <td>{{result.expired}}</td>
+
+        </tr>
+
+  </table>
+
 </div> -->
+<div class="m-auto table-responsive table-responsive-sm">
+<table class="table w-100 m-auto border border-5 table w-100 table-bordered" style="margin-top: 40px !important;">
+  <thead class="color">
+    <tr class="text-center">
+      <th scope="col">الاعلان</th>
+      <th scope="col">السعر</th>
+      <th scope="col">تاريح اخر دفع</th>
+      <th scope="col">تاريخ الدفع القادم</th>
+      <th scope="col">الاجراءات المتخذة</th>
+    </tr>
+  </thead>
+  <tbody *ngFor="let itms of advertisment">
+    <tr *ngFor="let ad of itms">
+      <td>{{ad.title}}</td>
+      <td>{{ad.payment[0].amount}}</td>
+      <td>{{result.date}}</td>
+      <td>{{result.expired}}</td>
+      <td><a mat-raised-button
+        class="send"
+        [routerLink]="['/details', ad.id]"
+      >
+        عرض</a
+      >
+      <button mat-raised-button class="send m-2" >حذف</button>
 
-<div class="container ">
-  <div class="row">
-    <div class="col-sm-12 col-md-4" *ngFor="let ads of advertisment">
-     <div class="" *ngFor="let item of ads">
-      <div class="card shadow-sm m-3">
-        <div class="photo">
-          <img
-            [src]="item.advertisement_image[0].image_name"
-            height="200px"
-            width="100%"
-            alt="{{ item.advertisement_image[0].image_name }}"
-          />
-        </div>
+    </td>
 
-        <div class="card-body bg-light" routerLink="/details/{{ item.id }}">
-          <div class="container">
-            <div class="row">
-              <div class="col px-3 py-2">
-                <div class="d-flex flex-row justify-content-between">
-                  <p class="mb-2 text-muted">{{ item.type }}</p>
-                  <div
-                    class="d-flex flex-row"
-                    *ngIf="item.ratings_count > 0"
-                  >
-                    <mat-icon style="font-size: large">star</mat-icon>
-                    <p>{{ item.ratings_avg_count }}</p>
-                    <p>({{ item.ratings_count }})</p>
-                  </div>
-                </div>
+    </tr>
 
-                <h3 class="mb-0 title">{{ item.title }}</h3>
-                <h3 class="mb-0 price">{{ item.price }}جنيه</h3>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">
-                    <span class="material-icons">location_on</span>
-                    {{ item.address }}</small
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-     </div>
-    </div>
-  </div>
-
+  </tbody>
+</table>
 </div>
